# periphery-app

./: .gitignore  CMakeLists.txt  LICENSE  commands.json  export_engine.js  index.js  models.json  package.json
docker/: Dockerfile  build_container.sh
docker/jetson/: build_dev_container.sh  build_release_container.sh  make_dev_image.sh  make_image.sh  make_release_image.sh
docker/jetson/dev/: Dockerfile
docker/jetson/release/: Dockerfile
docker/x86/: build_dev_container.sh  build_release_container.sh  make_dev_image.sh  make_release_image.sh
docker/x86/dev/: Dockerfile
docker/x86/release/: Dockerfile
include/: common.hpp  yolo11.hpp  yolov8.hpp
src/: main.cc  yolo11.cpp
yolov8-runner/: CMakeLists.txt  index.js  package-lock.json
yolov8-runner/include/: common.hpp  yolov8.hpp
yolov8-runner/src/: main.cc
